Hide "View in 3D" checkbox on small screens
Since the Jsmol view is hidden on small screens there is no need to
show this control. Related to #18

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -58,7 +58,7 @@
           <p>
             Basepair signature: {{result.signature}}
           </p>
-          <p>
+          <p class="visible-desktop">
             <input type='radio' name="group" id='s{{ forloop.parentloop.counter }}-{{ forloop.counter }}'
                    class='jmolInline' data-coord='{{ result.motif_id }}'>
             <label for='s{{ forloop.parentloop.counter }}-{{ forloop.counter }}'>View motif example in 3D</label>
