Make input description resizable

--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -14,7 +14,7 @@
   </div>
 
     <div class="span8">
-      <pre class="pre-scrollable input-summary">
+      <pre class="input-summary">
 {{query_info.formatted_input|linebreaksbr}}
       </pre>
       <button id='refine' class='btn btn-primary pull-right' data-id="{{query_info.query_id}}">
