--- a/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
+++ b/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
@@ -126,12 +126,10 @@ table .headerSortUp:after {
     width: 120px;
 }
 
-.search-summary {
-  overflow-x: auto;
-  overflow-y: auto;
-  white-space: nowrap;
-  font-family: 'DejaVu Sans Mono', monospace;
-  max-height: 100px;
+.input-summary {
+  height: 200px;
+  overflow: auto;
+  resize: vertical;
 }
 
 .loop-summary {
