--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -119,7 +119,7 @@
     <input type='button' id='stereo' class='btn' value="Show stereo">
     <input type='button' id='prev' class='btn' value='Previous'>
     <input type='button' id='next' class='btn' value="Next">
-    <label><input type="checkbox" id="showNtNums">Numbers</label>
+    <label><input type="checkbox" id="showNtNums">Nucleotide numbers</label>
 </div>
 
 <div id="popup-text">
