Add some space before Jsmol controls

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -114,12 +114,14 @@
         };
         jmolApplet0 = Jmol.getApplet("jmolApplet0", config);
     </script>
-
-    <input type='button' id='neighborhood' class='btn' value="Show neighborhood">
-    <input type='button' id='stereo' class='btn' value="Show stereo">
-    <input type='button' id='prev' class='btn' value='Previous'>
-    <input type='button' id='next' class='btn' value="Next">
-    <label><input type="checkbox" id="showNtNums">Nucleotide numbers</label>
+  
+    <div class="margin-top-5px">
+      <input type='button' id='neighborhood' class='btn' value="Show neighborhood">
+      <input type='button' id='stereo' class='btn' value="Show stereo">
+      <input type='button' id='prev' class='btn' value='Previous'>
+      <input type='button' id='next' class='btn' value="Next">
+      <label><input type="checkbox" id="showNtNums">Nucleotide numbers</label>
+    </div>
 </div>
 
 <div id="popup-text">
