Minor wording tweak on the homepage

--- a/Templates/JAR3Doutput/base_homepage.html
+++ b/Templates/JAR3Doutput/base_homepage.html
@@ -86,7 +86,7 @@ Scoring RNA loop sequences against known 3D motifs
         <div class="span4">
             <h2>Input</h2>
             <p>
-              JAR3D accepts single or multiple sequences having one or many loops (see <strong>examples</strong> above).
+              JAR3D accepts single or multiple sequences with one or many loops (see <strong>Examples</strong> above).
             </p>
             <p>
               <b>One loop:</b>
