--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -57,7 +57,17 @@ The strands of your internal loop have been switched to match the strand orderin
       {% for line, eds in seq_zip %}
         <tr style='background-color:#f8f8f8'>
           {% for cell in line %}
-          <td style='text-align:center;font-family:sans-serif;'>{{cell}}</td>
+            {% if cell == "A" %}
+              <td style='text-align:center;font-family:sans-serif;'><font color = "#990012">{{cell}}</font></td>
+            {% elif cell == "C" %}
+              <td style='text-align:center;font-family:sans-serif;'><font color = "#EAC117">{{cell}}</font></td>
+            {% elif cell == "G" %}
+              <td style='text-align:center;font-family:sans-serif;'><font color = "#347C17">{{cell}}</font></td>
+            {% elif cell == "U" %}
+              <td style='text-align:center;font-family:sans-serif;'><font color = "#000080">{{cell}}</font></td>
+            {% else}
+              <td style='text-align:center;font-family:sans-serif;'>{{cell}}</td>
+            {% endif %}
           {% endfor %}
           {% for cell in eds %}
           <td style='text-align:center;font-family:sans-serif;background-color:{{cell.1}};'>{{cell.0}}</td>
