--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -57,24 +57,24 @@ The strands of your internal loop have been switched to match the strand orderin
       {% for line, eds in seq_zip %}
         <tr style='background-color:#f8f8f8'>
           {% for cell in line %}
-            {% if forloop.first %}
+            {% if forloop.first or forloop.revcounter < 5 %}
               <td style='text-align:center;font-family:sans-serif;'>{{cell}}</td>
             {% else %}
-<td style='text-align:center;font-family:sans-serif;'>
-{% for char in cell %}
-{% if cell == "A" %}
-<font color = "#990012">{{char}}</font>
-{% elif cell == "C" %}
-<font color = "#EAC117">{{char}}</font>
-{% elif cell == "G" %}
-<font color = "#347C17">{{char}}</font>
-{% elif cell == "U" %}
-<font color = "#000080">{{char}}</font>
-{% else %}
-{{char}}
-{% endif %}
-{% endfor %}
-</td>
+              <td style='text-align:center;font-family:sans-serif;'>
+              {% for char in cell %}
+                {% if cell == "A" %}
+                  <font color = "#990012">{{char}}</font>
+                {% elif cell == "C" %}
+                  <font color = "#EAC117">{{char}}</font>
+                {% elif cell == "G" %}
+                  <font color = "#347C17">{{char}}</font>
+                {% elif cell == "U" %}
+                  <font color = "#000080">{{char}}</font>
+                {% else %}
+                  {{char}}
+                {% endif %}
+              {% endfor %}
+            </td>
             {% endif %}
           {% endfor %}
           {% for cell in eds %}
