--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -62,10 +62,7 @@ The strands of your internal loop have been switched to match the strand orderin
             {% else %}
               <td style='text-align:center;font-family:sans-serif;'>
               {% for char in cell %}
-                {% if char == "A" %}<font color = "#990012">{{char}}</font>{% elif char == "C" %}<font color = "#EAC117">{{char}}</font>{% elif char == "G" %}<font color = "#347C17">{{char}}</font>{% elif char == "U" %}<font color = "#000080">{{char}}</font>
-                {% else %}
-                  {{char}}
-                {% endif %}
+{% if char == "A" %}<font color = "#990012">{{char}}</font>{% elif char == "C" %}<font color = "#EAC117">{{char}}</font>{% elif char == "G" %}<font color = "#347C17">{{char}}</font>{% elif char == "U" %}<font color = "#000080">{{char}}</font>{% else %}{{char}}{% endif %}
               {% endfor %}
             </td>
             {% endif %}
@@ -86,10 +83,7 @@ The strands of your internal loop have been switched to match the strand orderin
             {% else %}
               <td style='text-align:center;font-family:sans-serif;'>
               {% for char in cell %}
-                {% if char == "A" %}<font color = "#990012">{{char}}</font>{% elif char == "C" %}<font color = "#EAC117">{{char}}</font>{% elif char == "G" %}<font color = "#347C17">{{char}}</font>{% elif char == "U" %}<font color = "#000080">{{char}}</font>
-                {% else %}
-                  {{char}}
-                {% endif %}
+{% if char == "A" %}<font color = "#990012">{{char}}</font>{% elif char == "C" %}<font color = "#EAC117">{{char}}</font>{% elif char == "G" %}<font color = "#347C17">{{char}}</font>{% elif char == "U" %}<font color = "#000080">{{char}}</font>{% else %}{{char}}{% endif %}
               {% endfor %}
             </td>
             {% endif %}
