Color alignment text

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -60,11 +60,7 @@ The strands of your internal loop have been switched to match the strand orderin
             {% if forloop.first or forloop.revcounter < 5 %}
               <td style='text-align:center;font-family:sans-serif;'>{{cell}}</td>
             {% else %}
-              <td style='text-align:center;font-family:sans-serif;'>
-              {% for char in cell %}
-{% if char == "A" %}<font color = "#990012">{{char}}</font>{% elif char == "C" %}<font color = "#EAC117">{{char}}</font>{% elif char == "G" %}<font color = "#347C17">{{char}}</font>{% elif char == "U" %}<font color = "#000080">{{char}}</font>{% else %}{{char}}{% endif %}
-              {% endfor %}
-            </td>
+              <td style='text-align:center;font-family:sans-serif;'>{% for char in cell %}{% if char == "A" %}<font color = "#990012">{{char}}</font>{% elif char == "C" %}<font color = "#EAC117">{{char}}</font>{% elif char == "G" %}<font color = "#347C17">{{char}}</font>{% elif char == "U" %}<font color = "#000080">{{char}}</font>{% else %}{{char}}{% endif %}{% endfor %}</td>
             {% endif %}
           {% endfor %}
           {% for cell in eds %}
@@ -81,11 +77,7 @@ The strands of your internal loop have been switched to match the strand orderin
             {% if forloop.first or forloop.revcounter < 5 %}
               <td style='text-align:center;font-family:sans-serif;'>{{cell}}</td>
             {% else %}
-              <td style='text-align:center;font-family:sans-serif;'>
-              {% for char in cell %}
-{% if char == "A" %}<font color = "#990012">{{char}}</font>{% elif char == "C" %}<font color = "#EAC117">{{char}}</font>{% elif char == "G" %}<font color = "#347C17">{{char}}</font>{% elif char == "U" %}<font color = "#000080">{{char}}</font>{% else %}{{char}}{% endif %}
-              {% endfor %}
-            </td>
+              <td style='text-align:center;font-family:sans-serif;'>{% for char in cell %}{% if char == "A" %}<font color = "#990012">{{char}}</font>{% elif char == "C" %}<font color = "#EAC117">{{char}}</font>{% elif char == "G" %}<font color = "#347C17">{{char}}</font>{% elif char == "U" %}<font color = "#000080">{{char}}</font>{% else %}{{char}}{% endif %}{% endfor %}</td>
             {% endif %}
           {% endfor %}
           {% for cell in eds %}
