--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -20,7 +20,10 @@
 {% endblock page_subtitle %}
 
 {% block page_content %}
+
+{% if not compress %}
 {{ block.super }}
+{% endif %}
 
 {% if results|length > 1 %}
 <div class="row">
@@ -96,6 +99,9 @@
       </tbody>
     </table>
     </div>
+    {% endif %}
+    {% if not compress %}
+    <a href="{{ result.align_url }}" target="_blank">{{ View All Results for this Loop }}</a>
     {% endif %}
 {% endfor %}
 </div>
