--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -100,7 +100,7 @@
     </table>
     {% if not compress %}
     <strong>
-    <a href="{{ result.align_url }}" target="_blank">View All Results for this Loop</a>
+    <a href="{{result.align_url}}/{{loop.loop_id}}" target="_blank">View All Results for this Loop</a>
     </strong>
     {% endif %}
     </div>
