Add links to all result pages

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -42,11 +42,11 @@
 {% for loop,sequences,indices,mins in results %}
     <div class="span8 loop-result-container">
     <h3 id="loop-{{ forloop.counter }}" class="loop-result-title">
-    {{if not compress}}
+    {% if not loopid %}
     Loop {{ forloop.counter }}
-    {{else}}
+    {% else %}
     Loop {{ loopid + 1}}
-    {{endif}}
+    {% endif %}
     </h3>
     Column Numbers: {{ indices }}
     <pre class="pre-scrollable loop-summary">{% for seq in sequences %}
