Add links to all result pages

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -45,7 +45,7 @@
     {% if not loopid %}
     Loop {{ forloop.counter }}
     {% else %}
-    Loop {{ loopid + 1}}
+    Loop {{ loopid }}
     {% endif %}
     </h3>
     Column Numbers: {{ indices }}
