--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -53,9 +53,10 @@
 {{seq}}<br/>
 {% endfor %}</pre>
     {% if loop|length == 0 %}
-    <strong>No Matches Found</strong>
+<strong>No Matches Found
+<a href="/jar3d/result/{{query_info.query_id}}/{{forloop.counter0}}/" target="_blank">View All Results for this Loop</a></strong>
     {% else %}
-    <strong>Click on headings to reorder table</strong>{% if not compress %} - <strong><a href="/jar3d/result/{{query_info.query_id}}/{{forloop.counter0}}/" target="_blank">View All Results for this Loop</a></strong>{% endif %}
+<strong>Click on headings to reorder table</strong>{% if not compress %} - <strong><a href="/jar3d/result/{{query_info.query_id}}/{{forloop.counter0}}/" target="_blank">View All Results for this Loop</a></strong>{% endif %}
     <table class="table table-striped table-condensed table-bordered">
       <thead>
         <tr>
