--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -82,7 +82,7 @@
           <p>
             <span class="visible-desktop">
               <input type='radio' name="group" id='s{{ forloop.parentloop.counter }}-{{ forloop.counter }}'
-                     class='jmolInline' data-coord='{{ result.motif_id }}'>
+                     class='jmolInline' data-coord='{{ result.motif_id }}' data-quality='{{ result.motif_id }}'>
               <label for='s{{ forloop.parentloop.counter }}-{{ forloop.counter }}'>View motif example in 3D</label>
             </span>
             <a class='btn btn-default margin-top-5px' href="{{result.align_url}}{{result.motif_id}}" target="_blank">Align sequences</a>
@@ -109,7 +109,8 @@
 
 <div class="span4 visible-desktop" id="jmol">
     <h3><a id="jsmol-motif-name" href="" target="_blank" title="View in RNA 3D Motif Atlas"></a></h3>
-    <script src="{% static "jsmol/JSmol.min.js" %}"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
+    <script src="{% static "jsmol/JSmol.min.nojq.js" %}"></script>
     <script type="text/javascript">
         function jmolScript(cmd) {Jmol.script(jmolApplet0, cmd)};
         function jmolScriptWait(cmd) {Jmol.scriptWait(jmolApplet0, cmd)};
@@ -143,7 +144,61 @@
       <input type='button' id='prev' class='btn' value='Previous'>
       <input type='button' id='next' class='btn' value="Next">
       <label><input type="checkbox" id="showNtNums">Nucleotide numbers</label>
+      <br>
+      Coloring options: <select id="colorOPT"> 
+                    <option value="Default" selected>Default</option>
+                    <option value="CPK" >CPK</option> 
+                    <option value="RSR" >Real Space R (RSR)</option>
+                    <option value="RSRZ">RSR Z-Score (RSRZ)</option>
+      </select>
+      <br>
+      <div class='showRSR' style="display:none">
+                    <svg height="30" width="340">
+                        <defs>
+                            <linearGradient id="grad3" x1="0%" y1="0%" x2="100%" y2="0%">
+                                <stop offset="10%" style="stop-color:#0d0887; stop-opacity:1" />
+                                <stop offset="20%" style="stop-color:#6603a5; stop-opacity:1" />
+                                <stop offset="30%" style="stop-color:#8a0da2; stop-opacity:1" />
+                                <stop offset="40%" style="stop-color:#ac2693; stop-opacity:1" />
+                                <stop offset="50%" style="stop-color:#ca457a; stop-opacity:1" />
+                                <stop offset="60%" style="stop-color:#df6264; stop-opacity:1" />
+                                <stop offset="70%" style="stop-color:#f0824d; stop-opacity:1" />
+                                <stop offset="80%" style="stop-color:#faa638; stop-opacity:1" />
+                                <stop offset="90%" style="stop-color:#fbcc27; stop-opacity:1" />
+                                <stop offset="100%" style="stop-color:#f0f921; stop-opacity:1" />
+                            </linearGradient>
+                        </defs>
+                    <rect x="0" y="0" width="300" height="15" fill="url(#grad3)"  />
+                    <text x="0" y="30" font-family="sans-serif" font-size="12px" fill="black">0.0</text>
+                    <text x="70" y="30" font-family="sans-serif" font-size="12px" fill="black">RSR Scale truncated at 0.5</text>
+                    <text x="285" y="30" font-family="sans-serif" font-size="12px" fill="black">0.5</text>
+                    </svg>
+      </div>
+
+      <div class='showRSRZ' style="display:none">
+                    <svg height="45" width="340">
+                        <defs>
+                        <text x="120" y="0" font-family="sans-serif" font-size="12px" fill="black">RSRZ Scale</text>
+                            <linearGradient id="grad2" x1="0%" y1="0%" x2="100%" y2="0%">
+                                <stop offset="25%" style="stop-color:green;stop-opacity:1" />
+                                <stop offset="25%" style="stop-color:yellow;stop-opacity:1" />
+                                <stop offset="50%" style="stop-color:yellow;stop-opacity:1" />
+                                <stop offset="50%" style="stop-color:orange;stop-opacity:1" />
+                                <stop offset="75%" style="stop-color:orange;stop-opacity:1" />
+                                <stop offset="75%" style="stop-color:red;stop-opacity:1" />
+                                <stop offset="100%" style="stop-color:red;stop-opacity:1" />
+                            </linearGradient>
+                        </defs>
+                    <rect x="0" y="0" width="300" height="15" fill="url(#grad2)"  />
+                    <text x="72" y="30" font-family="sans-serif" font-size="12px" fill="black">1</text>
+                    <text x="147" y="30" font-family="sans-serif" font-size="12px" fill="black">2</text>
+                    <text x="223" y="30" font-family="sans-serif" font-size="12px" fill="black">3</text>
+                    <text x="120" y="45" font-family="sans-serif" font-size="12px" fill="black">RSRZ Scale</text>
+                    </svg>
+      </div>
+    
     </div>
+
 </div>
 
 <div id="popup-text">
@@ -185,6 +240,7 @@
               showStereoId: 'stereo',
               showNeighborhoodId: 'neighborhood',
               showNumbersId: 'showNtNums',
+              colorOption: 'colorOPT',
               showNextId: 'next',
               showPrevId: 'prev'
           });
@@ -209,8 +265,9 @@
               $('#jsmol-motif-name').html('Motif ' + motif_id)
                                     .attr('href', 'http://rna.bgsu.edu/rna3dhub/motif/view/' + motif_id);            
             }
+            
             // set title to the first result
-            update_jsmol_title($('.jmolInline').first().data('coord'));
+            //update_jsmol_title($('.jmolInline').data('coord'));
             
             $('input:radio[name="group"]').on('change', function(){
               if (this.checked) {
